statistic chart layout

--- a/recruit-gui/src/app/statistics/statistics.component.css
+++ b/recruit-gui/src/app/statistics/statistics.component.css
@@ -117,4 +117,13 @@ chart-wrapper-page{
 		width:90%;
 	}
 	
+	.statChartTotalHdr{
+		display:inline-block;
+		width:
+		
+		
+		
+		200px;
+	}
+	
 }
