--- a/recruit-gui/src/app/statistics/statistics.component.css
+++ b/recruit-gui/src/app/statistics/statistics.component.css
@@ -101,6 +101,101 @@ chart-wrapper-page{
 	margin-left:5px;
 }
 
+/**
+Start ZoneCountryFilters
+**/
+.mobile-search-box{
+	margin-left:1%;
+	margin-right:1%;
+	width:94%;
+}
+
+.search-filter-pane{
+	margin-left:40px;
+}
+
+.sugg-srch-hdr{
+	width:120px;
+	font-weight:bold;
+}
+
+.toggle-filter-option{
+	margin:0px;
+	cursor:pointer;
+	color:#6a5acd;	
+}
+
+.sugg-srch-bdy{
+	margin-top:10px;
+}
+
+.geo-zone-filters{
+	padding:5px;
+	margin-top:5px;
+}
+
+.geo-code-selected-true{
+	opacity:1;
+}
+
+.geo-code-selected-false{
+	opacity:0.25;
+}
+
+.country-selections{
+	width:100%;
+}
+	 
+.country-filter{
+	margin-left:8px;
+}
+
+.country-selected-true{
+	opacity:1;
+}
+
+.country-selected-false{
+	opacity:0.25;
+}
+
+.filters-collapse-options{
+	margin-left:40px;
+	color:#6A5ACD;
+	font-weight:bold;
+	cursor:pointer;
+}
+
+.geo-code-filter {
+    float: left;
+    border-radius: .25rem;
+    margin: 5px;
+    background: #6a5acd;
+    color: #fff;
+    padding: 5px;
+    width: 300px;
+    cursor: pointer;
+    text-align: center;
+}
+/**
+END
+**/
+
+.function-selected-false{
+    opacity: .25;
+}
+
+.function-selectable {
+    float: left;
+    border-radius: .25rem;
+    margin: 5px;
+    background: #6a5acd;
+    color: #fff;
+    padding: 5px;
+    width: 300px;
+    cursor: pointer;
+    text-align: center;
+}
+
 @media (max-width:700px)  {
 	
 	.stat-canvas{
@@ -119,11 +214,24 @@ chart-wrapper-page{
 	
 	.statChartTotalHdr{
 		display:inline-block;
-		width:
-		
-		
-		
-		200px;
+		width:200px;
+	}
+	
+		.geo-code-filter{
+		width:100%;	
+	}
+	
+	.search-filter-pane{
+		margin-left:1%;
+		margin-right:1%;
+		width:98%;
+	}
+	
+	.filters-collapse-options{
+		margin-left:5px;
+		color:#6A5ACD;
+		font-weight:bold;
+		cursor:pointer;
 	}
 	
 }
