--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -14,11 +14,15 @@
 	        <button class="btn btn-secondary arenella-btn" (click)="showFilterByJobSpecDialog(specUploadBox)" download>{{'arenella-suggestions-btn-filter-by-spec' | translate}}</button>
 	        <button class="btn btn-secondary arenella-btn" (click)="doReset()">{{'arenella-suggestions-btn-reset' | translate}}</button>
 	     </div>
-		
-		<div class="{{searchBarCss}}" *ngIf="currentView != 'saved-candidates'">
-			<app-searchbar #searchbar (newSuggestionResults)="handleNewSearchRequest($event)" ></app-searchbar>
-		</div>
-		
+		 
+		 
+		 <div class="arenella-whole-width-page" *ngIf="currentView != 'saved-candidates' && currentView != 'suggested-canidate-overview'">
+		 
+		 </div>
+		 
+		 <div class="{{searchBarCss}}" *ngIf="currentView != 'saved-candidates'">
+		 	<app-searchbar #searchbar (newSuggestionResults)="handleNewSearchRequest($event)" ></app-searchbar>
+		 </div>
 		
 		<div *ngIf="currentView === 'saved-candidates'">
 			<app-saved-candidates [savedCandidates]="savedCandidates" (switchViewEvent)="showSuggestionsResults()" [infoItemConfig]="infoItemConfig" [skillFilters]="skillFilters"></app-saved-candidates>
