--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
@@ -4,11 +4,6 @@
 	padding: 10px;
 }
 
-/** 
-.listing-step-content{
-	width:90%;
-}
-*/
 .text-area-listing{
 	height:260px;
 	width:100%;
@@ -218,7 +213,8 @@ textarea {
 	margin:1%;
 	float:left;	
 	min-height:460px;
-	background:#e8e8e8;
+	background:#dee2e6;
+	color:6d6969;
 }
 
 .addListingDesc {
@@ -236,7 +232,8 @@ textarea {
 .add-container h2{
 	width:100%;
 	height:50px;
-	background:#6c757d;
+	background:#d2d2d2;
+	color:#002549;
 	padding:5px;
 	padding-left:10px;
 	
