--- a/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.css
+++ b/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.css
@@ -9,18 +9,18 @@
 }
 
 .suggestion-perception-perfect{
-	background:green;
+	background:#002549;
 	width:100%;	
 	height:10px;
 }
 
 suggestion-perception-excellent{
-	background:green;
+	background:#002549;
 	width:90%;
 	height:10px;
 }
 .suggestion-perception-good{
-	background:green;
+	background:#002549;
 	width:75%;
 	height:10px;
 }
@@ -36,7 +36,7 @@ suggestion-perception-excellent{
 }
 
 .suggestion-perception-result-perfect{
-	background:green;
+	background:#002549;
 	width:100%;	
 	height:8px;
 	border-bottom: 1px solid black;
@@ -69,14 +69,14 @@ suggestion-perception-excellent{
 	}	
 }
 .suggestion-perception-result-perfect{
-	background:green;
+	background:#002549;
 	width:100%;	
 	height:8px;
 	border-bottom: 1px solid black;
 }
 
 .suggestion-perception-result-excellent{
-	background:green;
+	background:#002549;
 	width:90%;
 	height:8px;
 	border-bottom: 1px solid black;
@@ -84,7 +84,7 @@ suggestion-perception-excellent{
 }
 
 .suggestion-perception-result-good{
-	background:green;
+	background:#002549;
 	width:75%;
 	height:8px;
 	border-bottom: 1px solid black;
@@ -111,7 +111,7 @@ suggestion-perception-excellent{
 	margin:2px;
 	padding:5px;
 	border-radius:5px;
-	background:green;
+	background:#002549;
 	display:inline-block;	
 }
 
