--- a/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.html
+++ b/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.html
@@ -27,16 +27,12 @@
 		<div class="right-body-pane details-right" *ngIf="!this.suggestedCandidate.removed">
 			<div style="width:100%"><h1>{{suggestedCandidate.roleSought}}</h1></div>
 		
-			<div *ngIf="candidateProfile.introduction && candidateProfile.introduction.length != 0" style="margin-top:50px;margin-bottom:50px;">
-				<div>
-					<h1 style="background:#e8e8e8">{{'arenella-suggestions-profile-introduction' | translate}}</h1>
-				</div>
+			<div *ngIf="candidateProfile.introduction && candidateProfile.introduction.length != 0" style="margin-bottom:50px;">
 				<div style="width:100%;">
 					<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">{{candidateProfile.introduction}}</pre>
 				</div>
 			</div>		
-			<div *ngIf="!candidateProfile.introduction || candidateProfile.introduction.length == 0" style="margin-top:50px;margin-bottom:50px;">
-				<div><h1 style="background:#e8e8e8">{{'arenella-suggestions-profile-introduction' | translate}}</h1></div>
+			<div *ngIf="!candidateProfile.introduction || candidateProfile.introduction.length == 0" style="margin-bottom:50px;">
 				<div style="width:100%;">
 					<div style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">
 					{{'arenella-suggestions-profile-intro-text' | translate}} {{this.suggestedCandidate.firstname}} 
